Fixed Cross-sell recommendations are not aligning properly for Mobile Layout (#2767)
* Fixed Cross-sell recommendations are not aligning properly for Mobile Layout

* added @include small instead of media

--- a/src/components/ui/PlanCard/self-recommendation/SelfRecommendation.module.scss
+++ b/src/components/ui/PlanCard/self-recommendation/SelfRecommendation.module.scss
@@ -1,3 +1,5 @@
+@import "../../../../scss/globalDefines";
+
 .container {
   display: flex;
   gap: 8px;
@@ -19,6 +21,7 @@
 
     .pills {
       display: flex;
+      flex-wrap: wrap;
       gap: 8px;
 
       .pill {
@@ -27,12 +30,32 @@
         justify-content: center;
         align-items: center;
         width: fit-content;
-        height: 15px;
         font-size: 15px;
         background-color: white;
         color: #717171;
         padding: 6px 8px;
         border-radius: 6px;
+      }
+    }
+  }
+}
+
+    @include small {
+  .container {
+    gap: 4px;
+    padding: 10px;
+    margin: 6px 0;
+  }
+
+  .content {
+    .pills {
+      flex-direction: row;
+      margin-top: 5px;
+
+      .pill {
+        padding: 4px 6px;
+        word-wrap: break-word;
+        white-space: normal;
       }
     }
   }
